--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ TEST_PORT=50051
 PROJECT_ID=calculatorgo
 TOPIC_ID=OPERATIONS
 SUB_ID=effected
+DB_HOST=db
+DB_PORT=27017
+DB_NAME=dbname
+DB_USER=dbuser
+DB_PASS=dbpass
