feat: connect to mongodb and use marshal

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ TEST_PORT=50051
 PROJECT_ID=calculatorgo
 TOPIC_ID=OPERATIONS
 SUB_ID=effected
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=27017
-DB_NAME=dbname
-DB_USER=dbuser
-DB_PASS=dbpass
+DB_NAME=admin
+DB_USER=user
+DB_PASS=12345
