--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER_PORT=50051
-TEST_PORT=50052
+QUERY_PORT=50052
+TEST_PORT=50053
 PROJECT_ID=calculatorgo
 TOPIC_ID=OPERATIONS
 SUB_ID=effected
